--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:title" content="Join Our Free Front-End Development Webinar">
 	<meta property="og:description" content="Learn essential skills and kickstart your career in IT with Powercode Academy.">
 	<meta property="og:image" content="img/svg/academy.svg">
-	<meta property="og:url" content="https://ivan-kononchuk.github.io/Test-task-RGB/"> <!-- Change to your website URL -->
+	<meta property="og:url" content="https://ivan-kononchuk.github.io/Test-task-RGB/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="img/svg/company-icon.svg">
@@ -18,6 +18,7 @@
 </head>
 <body>
 	
+	<!-- BLUE BACKGROUND CLOUDS -->
 	<img src="img/svg/ellipse-left.svg" alt="ellipse-left" class="ellipse-left">
 	<img src="img/svg/ellipse-right.svg" alt="ellipse-right" class="ellipse-right">
 
@@ -110,7 +111,7 @@
 					</div>
 				</div>
 				
-
+				<!-- ICONS ON THE RIGHT SIDE e.g HTML, JS -->
 				<div class="svg-icons">
 					<img src="img/svg/html-icon.svg" alt="html-icon"  class="html-icon">
 					<img src="img/svg/html-dot.svg" alt="html-dot"  class="html-dot">
@@ -143,14 +144,15 @@
 <script>
 const input = document.querySelector("#phone");
 window.intlTelInput(input, {
-	strictMode: true,
+	strictMode: true, // only digits can be entered
   initialCountry: "auto",
-  separateDialCode: true,
+  separateDialCode: true, // this option need to be true so I can grab country code 
+  // (+380) using js in "tg-form-send" and add it to phone number when form sends.
   formatAsYouType: true,
   i18n: {
       searchPlaceholder: "Поиск",
     },
-  geoIpLookup: callback => {
+  geoIpLookup: callback => { // this function puts your country as initial value
     fetch("https://ipapi.co/json")
       .then(res => res.json())
       .then(data => callback(data.country_code))
